# stable_diffusion_example

./: LICENSE  README.md  pyproject.toml
app/: Dockerfile  app.py  docker-compose.yaml  download_model.py
app/model/: stable_diffusion.py
app/views/: img2img.py  text2img.py
