[tool.poetry]
name = "stable_diffusion_example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
streamlit = "^1.12.2"
diffusers = "^0.2.4"
transformers = "^4.21.2"
scipy = "^1.9.1"
ftfy = "^6.1.1"
torch = {version="=1.12.0+cu116", source="torch"}
torchvision = {version="=0.13.0+cu116", source="torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
